--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
       - name: squashers
-        image: zaralink/bugsquashers:0
+        image: zaralink/ultimate-cicd:2
         ports:
         - containerPort: 8080
